--- a/Depoimentos.html
+++ b/Depoimentos.html
@@ -113,7 +113,7 @@
         <div class="testimonials-grid">
             
             <div class="card">
-                <img src="" alt="Hospital Hall" class="card-image">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtidKBCZIQO3PGMxV4aMcJBq5KmDnvxsjeDg&s" alt="Hospital Hall" class="card-image">
                 <div class="card-content">
                     <p class="quote">"Muito prático. A Rede Harmonia confirmou tudo na hora." - Felipe Silva</p>
 
@@ -121,21 +121,21 @@
             </div>
 
             <div class="card">
-                <img src="" alt="Consultório" class="card-image">
+                <img src="img\Rectangle 34.png" alt="Consultório" class="card-image">
                 <div class="card-content">
                     <p class="quote">"Consegui ortopedista rápido na OrtoPrime Recife. Salvou meu dia." - Carlos M. </p>
                 </div>
             </div>
 
             <div class="card">
-                <img src="" alt="Médicos conversando" class="card-image">
+                <img src="img\Rectangle 33.png" alt="Médicos conversando" class="card-image">
                 <div class="card-content">
                     <p class="quote">"Triagem precisa, facilita nosso atendimento e diagnóstico." - Santa Aurora</p>
                 </div>
             </div>
 
             <div class="card">
-                <img src="" alt="Médica com tablet" class="card-image">
+                <img src="img\Rectangle 35.png" alt="Médica com tablet" class="card-image">
                 <div class="card-content">
                     <p class="quote">"Acompanhamento ótimo após minha consulta na Santa Aurora." - Janaina Marques</p>
                 </div>
