--- a/Web-Depoimentos.html
+++ b/Web-Depoimentos.html
@@ -115,7 +115,7 @@
             <div class="card">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtidKBCZIQO3PGMxV4aMcJBq5KmDnvxsjeDg&s" alt="Hospital Hall" class="card-image">
                 <div class="card-content">
-                    <p class="quote">"Muito prático. A Rede Harmonia confirmou tudo na hora." - Felipe Silva</p>
+                    <p class="quote">"Muito prático. A Rede Harmonia confirmou tudo na hora."— Felipe Silva</p>
 
                 </div>
             </div>
@@ -123,21 +123,21 @@
             <div class="card">
                 <img src="img\Rectangle 34.png" alt="Consultório" class="card-image">
                 <div class="card-content">
-                    <p class="quote">"Consegui ortopedista rápido na OrtoPrime Recife. Salvou meu dia." - Carlos M. </p>
+                    <p class="quote">"Consegui ortopedista rápido na OrtoPrime Recife. Salvou meu dia."— Carlos M. </p>
                 </div>
             </div>
 
             <div class="card">
                 <img src="img\Rectangle 33.png" alt="Médicos conversando" class="card-image">
                 <div class="card-content">
-                    <p class="quote">"Triagem precisa, facilita nosso atendimento e diagnóstico." - Santa Aurora</p>
+                    <p class="quote">"Triagem precisa, facilita nosso atendimento e diagnóstico."— Santa Aurora</p>
                 </div>
             </div>
 
             <div class="card">
                 <img src="img\Rectangle 35.png" alt="Médica com tablet" class="card-image">
                 <div class="card-content">
-                    <p class="quote">"Acompanhamento ótimo após minha consulta na Santa Aurora." - Janaina Marques</p>
+                    <p class="quote">"Acompanhamento ótimo após minha consulta na Santa Aurora."— Janaina Marques</p>
                 </div>
             </div>
 
