--- a/Serviços.html
+++ b/Serviços.html
@@ -16,7 +16,7 @@
 
             <div class="container-cards">
                 
-                <div class="card-foto destaque">
+                <div class="card-foto">
                     <div class="area-imagem">
                         <img src="img\clinica-geral 1.png" alt="Clinica Geral">
                     </div>
