--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <section class="container">
         
         <div class= "Imagem">
-            <img src="minhafoto.png" alt="Médico">
+            <img src="img\medico.png" alt="Médico">
         </div>
         <div class="texto-principal"> 
             <H1 class="titulo-azul">Nosso Objetivo</H1>
