--- a/OutrosServiços.html
+++ b/OutrosServiços.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container header-content">
             <div class="logo">
-                <img src="img\Logo.png" alt="Saudável Recife" class="logo-img"> 
+                <img src="img\Logo.png" alt="Saudável Recife" style="width: 220px;">
             </div>
             
             <nav>
