--- a/NossoObjetivo.html
+++ b/NossoObjetivo.html
@@ -15,7 +15,7 @@
         <div class="conteudo-flex">
             
             <div class="area-imagem">
-                <img src="medico.png" alt="Médico">
+                <img src="/img/medico.png" alt="Médico">
             </div>
 
             <div class="texto-principal"> 
