Novas opções para selecionar no atendimento

--- a/Formulário Atendimento.html
+++ b/Formulário Atendimento.html
@@ -136,8 +136,10 @@
                             <div class="select-wrapper">
                                 <select class="form-select custom-arrow">
                                     <option value="" disabled selected></option>
-                                    <option value="cardiologia">Cardiologia</option>
-                                    <option value="dermatologia">Dermatologia</option>
+                                    <option value="Clinica-geral">Clinica-geral</option>
+                                    <option value="Telemedicina">Telemedicina</option>
+                                    <option value="Cirugia-geral">Cirugia-geral</option>
+                                    <option value="Ortopedia">Ortopedia</option>
                                 </select>
                             </div>
                         </div>
