Atualização dos serviços oferecidos no seletor

--- a/Formulário Atendimento.html
+++ b/Formulário Atendimento.html
@@ -140,6 +140,13 @@
                                     <option value="Telemedicina">Telemedicina</option>
                                     <option value="Cirugia-geral">Cirugia-geral</option>
                                     <option value="Ortopedia">Ortopedia</option>
+                                    <option value="Oftalmologia">Oftalmologia</option>
+                                    <option value="Cardiologia">Cardiologia</option>
+                                    <option value="Ginecologia">Ginecologia</option>
+                                    <option value="Neurologia">Neurologia</option>
+                                    <option value="Endocrinologia">Endocrinologia</option>
+                                    <option value="Pediatria">Pediatria</option>
+                                    <option value="Oncologia">Oncologia</option>
                                 </select>
                             </div>
                         </div>
