--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul id="nav_list">
                 <li class="nav-item active"><a href="#inicio">Início</a></li>
                 <li class="nav-item active"><a href="#objetivo">Nosso Objetivo</a></li>
-                <li class="nav-item active"><a href="serviço"> Serviços</a></li>
+                <li class="nav-item active"><a href="#sessao-fotos-servicos"> Serviços</a></li>
                 <li class="nav-item active"><a href="depoimento">Depoimentos</a></li>
                 <li class="nav-item active"><a href="blog">Blog</a></li>
             </ul>
@@ -56,7 +56,6 @@
     </header>
     <main id="content">
         <section id="inicio">
-
             <div class="shape"></div>
             <div id="cta">
                 <h1 class="title">
@@ -74,6 +73,69 @@
             </div>
 
         </section>
+
+
+
+        <section id="sessao-fotos-servicos">
+            <div class="service-container">
+                
+                <h2 class="titulo-principal">Serviços</h2>
+
+                <div class="container-cards">
+                    
+                    <div class="card-foto">
+                        <div class="area-imagem">
+                            <img src="img\clinica-geral 1.png" alt="Clinica Geral">
+                        </div>
+                        <div class="conteudo-card">
+                            <h3>Clinica-Geral</h3>
+                            <p>O Clínico geral é o primeiro contato para avaliar sua saúde, orientar cuidados e encaminhar para especialistas quando necessário.</p>
+                            <a href="#" class="btn-saiba-mais">Saiba mais ➔</a>
+                        </div>
+                    </div>
+
+                    <div class="card-foto">
+                        <div class="area-imagem">
+                            <img src="img\telemedicina 1.png" alt="Telemedicina">
+                        </div>
+                        <div class="conteudo-card">
+                            <h3>Telemedicina</h3>
+                            <p>Cuidado que chega até você. A Telemedicina facilita o acompanhamento de forma simples, sem deslocamentos.</p>
+                            <a href="#" class="btn-saiba-mais">Saiba mais ➔</a>
+                        </div>
+                    </div>
+
+                    <div class="card-foto">
+                        <div class="area-imagem">
+                            <img src="img\cirurgia-geral 1.png" alt="Cirurgia Geral">
+                        </div>
+                        <div class="conteudo-card">
+                            <h3>Cirurgia-Geral</h3>
+                            <p>Avaliação, indicação e acompanhamento de procedimentos cirúrgicos por profissionais experientes.</p>
+                            <a href="#" class="btn-saiba-mais">Saiba mais ➔</a>
+                        </div>
+                    </div>
+
+                    <div class="card-foto">
+                        <div class="area-imagem">
+                            <img src="img\ortopedista 1.png" alt="Ortopedia">
+                        </div>
+                        <div class="conteudo-card">
+                            <h3>Ortopedia</h3>
+                            <p>Atendimento especializado para lesões, dores articulares e problemas no sistema musculoesquelético.</p>
+                            <a href="#" class="btn-saiba-mais">Saiba mais ➔</a>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="footer-servicos">
+                    <p>Para outros Serviços</p>
+                    <a href="OutrosServiços.html" class="btn-outline">Clique Aqui</a>
+                </div>
+
+            </div>
+    </section>
 
 
         <section id="ods">
