Add animations | Jquery

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script> 
+
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -124,7 +128,7 @@
                         </div>
                         <div class="conteudo-card">
                             <h3>Clinica-Geral</h3>
-                            <p>O Clínico geral é o primeiro contato para avaliar sua saúde, orientar cuidados e encaminhar para especialistas quando necessário.</p>
+                            <p>O Clínico geral é o primeiro contato para avaliar sua saúde, orientar cuidados e encaminhar para especialistas.</p>
                             <a href="#" class="btn-saiba-mais">Saiba mais ➔</a>
                         </div>
                     </div>
@@ -369,7 +373,7 @@
                         <!-- Nome -->
                         <div class="form-group">
                             <label>Nome Completo:</label>
-                            <input type="text" class="form-control" required id ="nome">
+                            <input type="text" class="form-control" placeholder="Nome Completo" required id ="nome">
                         </div>
                         
                         <!-- CPF -->
@@ -534,7 +538,7 @@
                 <span class="popup-close-x" id="btn-x-fechar">&times;</span>
                 
             <!-- logo -->
-                <img src="img/Logo.png" alt="Logo da Empresa" class="popup-logo">
+                <img src="assets/Logo Saudável Recife.png" alt="Logo da Empresa" class="popup-logo">
 
                 <h2 class="popup-title">Agendamento Bem Sucedido</h2>
                 <p class="popup-subtitle">Sua saúde em primeiro lugar</p>
